fix: update small button gap for improved spacing

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -76,7 +76,7 @@
   .app-c-btn-sm {
     height: var(--form-item-height-sm);
     padding-inline: rem(12);
-    gap: rem(4);
+    gap: rem(8);
     font-size: var(--fs-sm);
     border-radius: var(--radius-sm);
   }
